2006-11-18  Djihed Afifi  <djihed@gmail.com>
	
	* configure.in: Added Arabic Language (ar).

2006-11-16  Lars Clausen  <lars@raeder.dk>

	* lib/font.[ch] (get_layout_offsets): Start of function to adjust
	all offsets in a layout line.  Not used yet, and not debugged.
	Kept around for when we have more runs in a line.

	* lib/textline.c (text_line_adjust_layout_line): Adjusts the glyph
	sizes within a PangoLayoutLine to overcome the rounding problems
	and ensure linear scaling of fonts.  Currently only fixes the
	first run, since AFAIK that's all we can do with current text
	input anyway.

	* lib/diagdkrenderer.c (draw_text_line): Now uses
	text_line_adjust_layout_line to avoid repeating Pango digging for
	Freetype and GDK code both. Ready to merge freetype and GDK
	duplicate code.

2006-11-15  Lars Clausen  <lars@raeder.dk>

	* plug-ins/vdx/*: Update to version 0.6.1 yields improvements in
	both export and import.

2006-11-13  Lars Clausen  <lars@raeder.dk>

	* lib/font.c: Internally calculate glyph offsets at *20 font size
	to avoid rounding problems.

	* app/layer_dialog.c: Revamped the visibility toggling system to
	make visibility change a properly undoable operation, making the
	page borders resize in the process.

	* objects/standard/line.c (line_load, line_save): 
	* objects/standard/arc.c (arc_load, arc_save): 
	* objects/standard/polyline.c (polyline_load, polyline_save): 
	* objects/standard/bezier.c (bezierline_load, bezierline_save): 
	* objects/standard/zigzagline.c (zigzagline_load, zigzagline_save):
	Use generic load/save functions.

	* lib/libdia.def: 
	* lib/arrows.[ch]: Generic functions for loading and saving
	arrows, including sanitizing on load, part of fixing bug #144394.

	* objects/FS/flow-ortho.c (orthflow_draw): 
	* objects/FS/flow-poly.c (orthflow_draw): Update to use modern
	arrow rendering.

	* app/modify_tool.c (modify_start_text_edit) 
	(modify_make_text_edit): Don't use dia_font_scaled_* when
	avoidable. 
