@@ -1,3 +1,8 @@
+2006-11-22  Lars Clausen  <lars@raeder.dk>
+
+	* app/menus.c: Patch adding shortcuts for align functions, thanks
+	be to jan@uos.de.
+
 2006-11-18  Djihed Afifi  <djihed@gmail.com>
 	
 	* configure.in: Added Arabic Language (ar).
